[project]
name = "fastcms"
version = "0.0.1"
description = "FastCMS is a lightweight CMS built with FastAPI and SQLAlchemy."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Robanni", email = "robanniba@gmail.com" }]
dependencies = ["fastapi>=0.100.0", "sqlalchemy>=2.0", "pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastcms"]

[tool.uv]
dev-dependencies = ["pytest", "httpx"]
